# sales_pipeline

./: .gitignore  README.md  launch_tests.ipynb  main.py  pyproject.toml
.github/workflows/: ci.yml
sales_pipeline/bronze/: ingestion.py
sales_pipeline/gold/: aggregation.py
sales_pipeline/pipeline/: pipeline.py
sales_pipeline/sales_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sales_pipeline/silver/: cleaning.py
tests_ci/: test_gold_ci.py
