[project]
name = "sales_pipeline"
version = "0.1.0"
description = "Pipeline de traitement Spark : Bronze / Silver / Gold"
authors = [{ name = "Hugo Boulenger" }]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pyspark",
    "pyyaml",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["sales_pipeline"]
