[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sales_pipeline"
version = "0.1.0"
description = "Pipeline de traitement Spark Bronze / Silver / Gold"
authors = [{ name = "Hugo Boulenger" }]
readme = "README.md"
requires-python = ">=3.8"


dependencies = [
    "pyspark",
    "pyyaml"
]

[project.urls]
Repository = "https://github.com/hugoboulengeraubay/sales_pipeline"

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "wheel"
]

[tool.setuptools.packages.find]
where = ["."]
